apps/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
      - name: echo1
        image: tafymunya/welcomespringboot:v1
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 400
          periodSeconds: 50
        volumeMounts:
        - name: scf
          mountPath: /usr/local
        - name: mvn
          mountPath: /usr/share
      volumes:
      - name: scf
        persistentVolumeClaim:
          claimName: scf
      - name: mvn
        persistentVolumeClaim:
          claimName: mvn
