apps/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo1
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: echo1
