apps/webapp/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: echo1-ingress
spec:
  rules:
  - host: echo1.webapp-coreapp.p16n.org
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
        path: /(.*)
